# Dishanveshi2

./: .gitmodules  CMakeLists.txt  README.md  index.html  index.js  style.css
.cache/clangd/index/: bitmap.h.7F05B5032D95072D.idx  config.h.7F873AA4C79AF661.idx  convolution_test.c.44E38092079C79A4.idx  convolve.h.6B4E520561A22FFF.idx  defs.h.0C172CF65D38D027.idx  defs.h.5CEFDF9EF363838D.idx  defs.h.72955F3A4BFBDCB2.idx  defs.h.7C734D3699D568C6.idx  image.h.996024C229824590.idx  init.c.6550CCB56B6BFC6F.idx  init.h.96D7B0D2395B2E92.idx  misc.c.8A05239283295E04.idx  misc.h.CB249F54ABFE7716.idx  misc.h.D2E0532D559F9A91.idx  types.h.3527748B9BFAD275.idx  types.h.8289162FB73EAF80.idx  types.h.EAF71E086B41B5ED.idx  ui_practice.c.55BD0F3AE15A09E3.idx  webui.h.43AEE33B3036C69F.idx
.github/workflows/: static.yml
include/: misc.h
include/dishanveshi/: config.h  defs.h  dsvi.h  init.h  types.h
include/dishanveshi/image/: defs.h  image.h  types.h
include/dishanveshi/image/operations/: CCL.h  HSV.h  convolve.h  defs.h  dither.h  filter.h  histogram.h  misc.h  queue.h  region.h  template.h  types.h
include/dishanveshi/math/: common.h  defs.h  line.h  point.h  types.h
resources/: img1.avif
src/: GUI_Demo.c  color_format.c  color_format_image.c  convolution_test.c  freeSpace.c  histogram_test.c  main.c  math2D_test.c  sub_sample.c  template_test.c  test_image.c
src/common/: init.c  misc.c
src/common/image/: image.c
src/common/image/bitmap/: bitmap.c  bitmap.h  defs.h
src/common/image/operations/: CCL.c  HSV.c  convolve.c  dither.c  filter.c  histogram.c  misc.c  queue.c  region.c  template.c
src/common/math/: common.c  line.c  point.c
src/ui/: ui_main.c  ui_practice.c
website/: index_cgpt.html
